# tg_bot_for_habit_tracking

./: .env.template  .gitignore  Dockerfile  README.md  app.py  database.py  docker-compose.yml  loader.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py
alerts/: __init__.py  get_all_alert_time.py  main.py  reminder.py  reminder_habits.py
api/: __init__.py
api/auth/: utils.py
api/database/: database.py
api/database/models/: __init__.py  habit.py  habit_trackings.py  user.py
api/routes/: __init__.py  auth_user.py  create_habit.py  get_all_habits.py  get_habit_by_title.py  get_habit_by_title_or_id.py  get_user_info.py  habit_editing.py  habit_update.py  lifespan.py  perform_habit.py  registration_user.py  remove_habit.py
api/routes/utils/: __init__.py  (+3 more)
api/schemas/: __init__.py  get_user_info_schema.py  habit_editing.py  habit_info_schema.py  habit_schema.py  habit_tracking_schema.py  habit_update_schema.py  new_habit.py  new_habit_schema.py  token_schema.py  token_schemas.py  user_schema.py
auth/: config.py
config/: config.py
database/: database.py
database/models/: __init__.py  habit.py  habit_trackings.py  user.py
models/: __init__.py  models.py
schemas/: habit_schema.py  token_schemas.py  user_schema.py
telegram_bot/: Dockerfile  __init__.py  bot_default_command.py
telegram_bot/schemas/: __init__.py  habit_schema.py  user_token_schema.py
telegram_bot/sqlite_db/: __init__.py  sql_database.py
telegram_bot/states/: states.py
telegram_bot/utils/: __init__.py  get_user_token.py  insert_token_db.py  true_time.py
(+26 files in other folders)
